# NativeBinderClient

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/nativebinderclient/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: binder  note
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  wonderful_binder.cpp  wonderful_binder.h
app/src/main/cpp/binder/include/binder/: IBinder.h
app/src/main/cpp/binder/include/system/: graphics.h
app/src/main/cpp/binder/include/utils/: RefBase.h  threads.h
app/src/main/cpp/test/include/: test.h
app/src/main/java/com/example/nativebinderclient/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/nativebinderclient/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
